fix(dropdown): disabled On hover visibility icon |AI icon hover fix |selected menu text fix

--- a/src/common/scss/menu-item.scss
+++ b/src/common/scss/menu-item.scss
@@ -25,6 +25,10 @@
     color: var(--kd-color-text-level-disabled);
   }
 
+  &[selected] .menu-item-inner-el {
+    color: var(--kd-color-text-level-disabled);
+  }
+
   &,
   & * {
     cursor: not-allowed;
@@ -35,6 +39,10 @@
 
     .menu-item-inner-el {
       color: var(--kd-color-text-level-disabled);
+    }
+
+    slot[name='icon']::slotted(span) {
+      color: var(--kd-color-icon-disabled);
     }
   }
 }
